Move client to web

--- a/web/student/index.html
+++ b/web/student/index.html
@@ -42,6 +42,10 @@
                         <p1>Current count of queue</p1>
                         <h1 id="current-count" class="stat">0</h1>
                     </div>
+                    <div class="ta-count-div">
+                        <p1>TAs on duty</p1>
+                        <h1 id="ta-count" class="stat">0</h1>
+                    </div>
                     <div class="stats-div">
                         <p1>Current wait time</p1>
                         <h1 id="wait-time" class="stat">0 min</h1>
