Better looking queue

--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,7 @@
       
           <!--- Service Queue -->
           <section id="queue-list-section" class="queue-list-section">
-            <div class="queue-list">
+            <div class="queue-list-div">
               <ul id="queue-list" class="queue-list">
               </ul>
             </div>
